# ir-remote-idf

./: CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  main.cpp
main/src/: IRrecv.cpp
